LocalDiskFile refactor fixes